--- a/i.html
+++ b/i.html
@@ -6,13 +6,14 @@
   </head>
 
   <body>
-<<<<<<< HEAD
+<HEAD></HEAD>
     <header>what the fuck</header>
     <main></main>
-=======
+
     <header></header>
     <main>freshman</main>
->>>>>>> bf11e2bb6c608351fdd23d85bc15d5f7e953ffb0
     <footer>sad</footer>
+    <footer>asdasdasd</footer>
+    bye bye bye 
   </body>
 </html>
