--- a/i.html
+++ b/i.html
@@ -6,13 +6,18 @@
   </head>
 
   <body>
-<<<<<<< HEAD
+
     <header>what the fuck</header>
     <main></main>
-=======
+    <div></div>
+<section>
+    1.윤
+    2.희
+    3.권
+</section>
     <header></header>
     <main>freshman</main>
->>>>>>> bf11e2bb6c608351fdd23d85bc15d5f7e953ffb0
+
     <footer>sad</footer>
   </body>
 </html>
