--- a/i.html
+++ b/i.html
@@ -2,34 +2,26 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>HTML5</title>
+    <title>Visual studio code</title>
   </head>
 
   <body>
-<h1>h11111</h1>
-<h2>h22222</h2>
-    <header>what the fuck</header>
-    <main></main>
-    <div></div>
-<section>
-    1.윤
-    2.희
-    3.권
-    4.5
-    6.
-    7.
-    8.
-    9.
-    0.
-</section>
-    <header></header>
-    <main>freshman</main>
 
-    <footer>sad</footer>
-    <footer>asdasdasd</footer>
-    bye bye bye 
-    <div>
-      Good Luck !!!
-    </div>
+<section>
+<h1>사용시 반드시 Live Server (확장 프로그램) 가 있어야합니다 .</h1>
+<h2>먼저 확장프로그램 검색창에 live server를 검색해줍니다.</h2>
+<h2>검색후 </h2>
+<img src="img1.png">
+<ul>
+  <li>톱니바퀴 클릭</li>
+  <li>확장 설정 클릭</li>
+</ul>
+<h2>본인의 IPv4를 입력 해줍니다 (반드시 같은 와이파이여야함)</h2>
+<img src="img2.png">
+
+<h2>끝</h2>
+</section>
+
+
   </body>
 </html>
